--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.session.store-type=none
 server.port=8090
 
 #TODO mysql
-spring.datasource.url=jdbc:postgresql://localhost:5432/bankaccounts
-spring.datasource.username=user1
-spring.datasource.password=pass1
+spring.datasource.url=jdbc:mysql://localhost:3306/social
+spring.datasource.username=root
+spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
