--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.session.store-type=none
 server.port=8090
 
-#TODO mysql
+#mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/social
 spring.datasource.username=root
 spring.datasource.password=admin
