heroku db settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.session.store-type=none
 server.port=8090
 
 #mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/social
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.url=jdbc:mysql://us-cdbr-east-04.cleardb.com:3306/heroku_a09232593131baf
+spring.datasource.username=bcfdf06985ba00
+spring.datasource.password=66c45bbe
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
